feat(newsletter): ✨ Use Issue for getting a newsletter
